--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
       <section class="card" id="javascript-section">
         <h2>javascript</h2>
           <ul>
-            <li>javascript notes here</li>
+            <li>A variable is a named container that allows us to store data in our code.</li>
+            <li>Control flow is the order in which a computer executes code in a script.</li>
+            <li>Debugging is an important step in the process as always.</li>
           </ul>
 
       </section>
